force-app/main/default/objects/Validation_Settings__c/Validation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Validation Settings</label>
</CustomObject>