force-app/main/default/objects/Validation_Settings__c/fields/Disable_Rules_on_Repayment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Disable_Rules_on_Repayment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Rules on Repayment Schedule</label>
    <type>Checkbox</type>
</CustomField>