force-app/main/default/objects/Validation_Settings__c/fields/Disable_Validation_Rules_on_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation_Rules_on_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rules on Transaction</label>
    <type>Checkbox</type>
</CustomField>